[package]
name = "rust-sokoban"
version = "0.1.0"
authors = ["Gen Ichino <zenoplex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
itertools = "0.10.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
